@@ -22,9 +22,7 @@ package org.olat.basesecurity.manager;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.ArrayList;
 import java.util.Calendar;
-import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -66,7 +64,7 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	public void updateCredential() {
 		String token = UUID.randomUUID().toString();
 		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-1-");
-		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), RestSecurityBeanImpl.REST_AUTH_PROVIDER, BaseSecurity.DEFAULT_ISSUER,
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), RestSecurityBeanImpl.REST_AUTH_PROVIDER, BaseSecurity.DEFAULT_ISSUER, null,
 				ident.getLogin(), token, null);
 		dbInstance.commitAndCloseSession();
 
@@ -93,7 +91,7 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	public void getIdentitiesWithAuthentication() {
 		String token = UUID.randomUUID().toString();
 		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-6-");
-		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "SPECAUTH", BaseSecurity.DEFAULT_ISSUER,
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "SPECAUTH", BaseSecurity.DEFAULT_ISSUER, null,
 				ident.getLogin(), token, null);
 		dbInstance.commitAndCloseSession();
 		Assert.assertNotNull(auth);
@@ -106,11 +104,11 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	public void getIdentitiesWithAuthenticationWithoutOrgnisation() {
 		String token1 = UUID.randomUUID().toString();
 		IdentityWithLogin ident1 = JunitTestHelper.createAndPersistRndUser("authdao-36-");
-		Authentication auth1 = securityManager.createAndPersistAuthentication(ident1.getIdentity(), "SPECAUTH", BaseSecurity.DEFAULT_ISSUER,
+		Authentication auth1 = securityManager.createAndPersistAuthentication(ident1.getIdentity(), "SPECAUTH", BaseSecurity.DEFAULT_ISSUER, null,
 				ident1.getLogin(), token1, null);
 		String token2 = UUID.randomUUID().toString();
 		IdentityWithLogin identWithoutOrg = JunitTestHelper.createAndPersistRndUser("authdao-36-");
-		Authentication auth2 = securityManager.createAndPersistAuthentication(identWithoutOrg.getIdentity(), "SPECAUTH", BaseSecurity.DEFAULT_ISSUER,
+		Authentication auth2 = securityManager.createAndPersistAuthentication(identWithoutOrg.getIdentity(), "SPECAUTH", BaseSecurity.DEFAULT_ISSUER, null,
 				identWithoutOrg.getLogin(), token2, null);
 		dbInstance.commitAndCloseSession();
 		Assert.assertNotNull(auth1);
@@ -129,7 +127,7 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	public void loadByKey() {
 		String token = UUID.randomUUID().toString();
 		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-26-");
-		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "SPECAUTH", BaseSecurity.DEFAULT_ISSUER,
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "SPECAUTH", BaseSecurity.DEFAULT_ISSUER, null,
 				ident.getLogin(), token, null);
 		dbInstance.commitAndCloseSession();
 		Assert.assertNotNull(auth);
@@ -155,7 +153,7 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	public void getIdentitiesWithLogin() {
 		String token = UUID.randomUUID().toString();
 		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-2-");
-		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER,
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER, null,
 				ident.getLogin(), token, null);
 		dbInstance.commitAndCloseSession();
 		Assert.assertNotNull(auth);
@@ -170,7 +168,7 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	public void getIdentitiesWithCamelCaseLogin() {
 		String token = UUID.randomUUID().toString();
 		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-2-");
-		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER,
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER, null,
 				ident.getLogin(), token, null);
 		dbInstance.commitAndCloseSession();
 		Assert.assertNotNull(auth);
@@ -190,7 +188,7 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	public void getAuthentication() {
 		String token = UUID.randomUUID().toString();
 		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-2-");
-		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER,
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER, null,
 				ident.getLogin(), token, null);
 		dbInstance.commitAndCloseSession();
 		Assert.assertNotNull(auth);
@@ -207,7 +205,7 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	public void getAuthenticationByAuthusername() {
 		String token = UUID.randomUUID().toString();
 		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-2-");
-		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER,
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER, null,
 				ident.getLogin(), token, null);
 		dbInstance.commitAndCloseSession();
 		Assert.assertNotNull(auth);
@@ -224,7 +222,7 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	public void getAuthenticationByAuthusernameCamelCase() {
 		String token = UUID.randomUUID().toString();
 		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-2low-");
-		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER,
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER, null,
 				ident.getLogin(), token, null);
 		dbInstance.commitAndCloseSession();
 		Assert.assertNotNull(auth);
@@ -242,7 +240,7 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	public void getAuthenticationsByAuthusername() {
 		String token = UUID.randomUUID().toString();
 		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-2-");
-		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER,
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER, null,
 				ident.getLogin(), token, null);
 		dbInstance.commitAndCloseSession();
 		Assert.assertNotNull(auth);
@@ -257,7 +255,7 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	public void getAuthenticationsByAuthusernameCamelCase() {
 		String token = UUID.randomUUID().toString();
 		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-2-");
-		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER,
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER, null,
 				ident.getLogin(), token, null);
 		dbInstance.commitAndCloseSession();
 		Assert.assertNotNull(auth);
@@ -290,19 +288,19 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	public void getAuthenticationsByAuthusername_providersList() {
 		String token = UUID.randomUUID().toString();
 		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-2-");
-		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER,
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER, null,
 				ident.getLogin(), token, null);
 		dbInstance.commitAndCloseSession();
 		Assert.assertNotNull(auth);
 
-		List<String> olatProviderList = Collections.singletonList("OLAT");
+		List<String> olatProviderList = List.of("OLAT");
 		List<Authentication> olatAuthentications = authenticationDao.getAuthenticationsByAuthusername(ident.getLogin(), olatProviderList);
 		Assert.assertNotNull(olatAuthentications);
 		Assert.assertEquals(1, olatAuthentications.size());
 		Assert.assertEquals(ident.getIdentity(), olatAuthentications.get(0).getIdentity());
 		
 		// negative test
-		List<String> ldapProviderList = Collections.singletonList("LDAP");
+		List<String> ldapProviderList = List.of("LDAP");
 		List<Authentication> ldapAuthentications = authenticationDao.getAuthenticationsByAuthusername(ident.getLogin(), ldapProviderList);
 		Assert.assertNotNull(ldapAuthentications);
 		Assert.assertTrue(ldapAuthentications.isEmpty());
@@ -312,12 +310,12 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	public void getAuthenticationsByAuthusername_providersCamelList() {
 		String token = UUID.randomUUID().toString();
 		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-2-");
-		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER,
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER, null,
 				ident.getLogin(), token, null);
 		dbInstance.commitAndCloseSession();
 		Assert.assertNotNull(auth);
 
-		List<String> providerList = Collections.singletonList("OLAT");
+		List<String> providerList = List.of("OLAT");
 		List<Authentication> lowerAuthentications = authenticationDao.getAuthenticationsByAuthusername(ident.getLogin().toLowerCase(), providerList);
 		Assert.assertNotNull(lowerAuthentications);
 		Assert.assertEquals(1, lowerAuthentications.size());
@@ -331,10 +329,39 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	}
 	
 	@Test
+	public void getAuthenticationsByAuthusernameAndExternalIds() {
+		String provider = "DIUDES";
+		String token = UUID.randomUUID().toString();
+		String externalId = UUID.randomUUID().toString();
+		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-3-");
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), provider, BaseSecurity.DEFAULT_ISSUER, externalId,
+				ident.getLogin(), token, null);
+		dbInstance.commitAndCloseSession();
+		Assert.assertNotNull(auth);
+
+		// All match
+		List<Authentication> authentications = authenticationDao.getAuthentications(ident.getLogin().toLowerCase(), List.of(externalId), provider, BaseSecurity.DEFAULT_ISSUER);
+		Assert.assertNotNull(authentications);
+		Assert.assertEquals(1, authentications.size());
+		Assert.assertEquals(ident.getIdentity(), authentications.get(0).getIdentity());
+		
+		// Partial match
+		List<Authentication> partialAuthentications = authenticationDao.getAuthentications("something-other", List.of(externalId, "more-than-external-id"), provider, BaseSecurity.DEFAULT_ISSUER);
+		Assert.assertNotNull(partialAuthentications);
+		Assert.assertEquals(1, partialAuthentications.size());
+		Assert.assertEquals(ident.getIdentity(), partialAuthentications.get(0).getIdentity());
+		
+		// No match
+		List<Authentication> noAuthentications = authenticationDao.getAuthentications("something-other", List.of("something-random", "more-than-external-id"), provider, BaseSecurity.DEFAULT_ISSUER);
+		Assert.assertNotNull(noAuthentications);
+		Assert.assertTrue(noAuthentications.isEmpty());
+	}
+	
+	@Test
 	public void getAuthentications() {
 		String token = UUID.randomUUID().toString();
-		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-2-");
-		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER,
+		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-4-");
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER, null,
 				ident.getLogin(), token, null);
 		dbInstance.commitAndCloseSession();
 		Assert.assertNotNull(auth);
@@ -348,8 +375,8 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	@Test
 	public void hasAuthentication() {
 		String token = UUID.randomUUID().toString();
-		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-2-");
-		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER,
+		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-5-");
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER, null,
 				ident.getLogin(), token, null);
 		dbInstance.commitAndCloseSession();
 		Assert.assertNotNull(auth);
@@ -363,14 +390,13 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	@Test
 	public void hasValidOlatAuthentication() {
 		String token = UUID.randomUUID().toString();
-		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-3-");
-		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER,
+		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-6-");
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER, null,
 				ident.getLogin(), token, null);
 		dbInstance.commitAndCloseSession();
 		Assert.assertNotNull(auth);
 		
-		List<String> fullProviders = new ArrayList<>();
-		fullProviders.add(LDAPAuthenticationController.PROVIDER_LDAP);
+		List<String> fullProviders = List.of(LDAPAuthenticationController.PROVIDER_LDAP);
 
 		//check nothing at the end
 		boolean valid = authenticationDao.hasValidOlatAuthentication(ident.getIdentity(), false, 0, fullProviders);
@@ -386,8 +412,8 @@ public class AuthenticationDAOTest extends OlatTestCase {
 	@Test
 	public void hasValidOlatAuthentication_tooOld() {
 		String token = UUID.randomUUID().toString();
-		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-3-");
-		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER,
+		IdentityWithLogin ident = JunitTestHelper.createAndPersistRndUser("authdao-7-");
+		Authentication auth = securityManager.createAndPersistAuthentication(ident.getIdentity(), "OLAT", BaseSecurity.DEFAULT_ISSUER, null,
 				ident.getLogin(), token, null);
 		dbInstance.commitAndCloseSession();
 		Assert.assertNotNull(auth);
@@ -400,8 +426,7 @@ public class AuthenticationDAOTest extends OlatTestCase {
 		dbInstance.commitAndCloseSession();
 
 		//check if the authentication is new
-		List<String> fullProviders = new ArrayList<>();
-		fullProviders.add(LDAPAuthenticationController.PROVIDER_LDAP);
+		List<String> fullProviders = List.of(LDAPAuthenticationController.PROVIDER_LDAP);
 		boolean tooOld = authenticationDao.hasValidOlatAuthentication(ident.getIdentity(), false, 60, fullProviders);
 		Assert.assertFalse(tooOld);
 	}
